--- a/paxos.bib
+++ b/paxos.bib
@@ -245,3 +245,28 @@ year         = {2005},
     institution = {},
     year = {2010}
 }
+
+@inbook{bortnikov,
+  title = "Reconfigurable state machine replication from non-reconfigurable building blocks",
+  author = "V. Bortnikov and G. Chockler and A. Roytman and S. Shachor and I. Shnayderman and D. Perelman",
+  year = "2012",
+  doi = "10.1145/2332432.2332449",
+  pages = "93--94",
+  booktitle = "Proceedings of the 31st Annual ACM Symposium on Principles of Distributed Computing",
+  publisher = "ACM",
+}
+
+@ARTICLE{flexible-paxos,
+   author = {{Howard}, H. and {Malkhi}, D. and {Spiegelman}, A.},
+    title = "{Flexible Paxos: Quorum intersection revisited}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1608.06696},
+ primaryClass = "cs.DC",
+ keywords = {Computer Science - Distributed, Parallel, and Cluster Computing, C.2.4},
+     year = 2016,
+    month = aug,
+   adsurl = {http://adsabs.harvard.edu/abs/2016arXiv160806696H},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
