--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -1528,7 +1528,7 @@ weight functions and $k, k'$ are positive integers such that $k'w'(a) = kw(a)$
 for all $a$ then then $M(w) \frown M(w')$.  \end{lemma}
 
 \begin{proof} By lemma \ref{weights-nearly-equal-factors}, since $\sum_{a \in
-\mathbb A} |kw'(a) - kw(a)| = 0$.  \end{proof}
+\mathbb A} |k'w'(a) - kw(a)| = 0$.  \end{proof}
 
 \begin{corollary} \label{weights-equal} If $w : \mathbb A \to \mathbb N$ is a
 weight function then \[M(w) \frown M(w).\]  \end{corollary}
