Replace 'DRAFT' with hyphen

--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -412,7 +412,7 @@ d.turner@tracsis.com)}% <-this % stops a space
 
 % The paper headers
 %\markboth{IEEE Transactions on Parallel and Distributed Systems,~Vol.~?, No.~?, %?~? Draft \gitid}{Turner: \mytitle}%
-\markboth{Unbounded Pipelining in Dynamically Reconfigurable Paxos Clusters Draft \gitid}%TODO Journal of \LaTeX\ Class Files,~Vol.~14, No.~8, August~2015}%
+\markboth{Unbounded Pipelining in Dynamically Reconfigurable Paxos Clusters --- \gitid}%TODO Journal of \LaTeX\ Class Files,~Vol.~14, No.~8, August~2015}%
 {Turner: \mytitle}
 % The only time the second header will appear is for the odd numbered pages
 % after the title page when using the twoside option.
