Update email address

--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -385,7 +385,7 @@
 \thanks{Manuscript received \pubdate.}%
 \thanks{The author is with the Operations and Planning Systems division of
 Tracsis plc, Leeds LS2 9DF, United Kingdom (email:
-d.turner@tracsis.com)}% <-this % stops a space
+dct25-a1vwi@mythic-beasts.com)}% <-this % stops a space
 %\thanks{Digital Object Identifier 99.9999/ZZZ.9999.999999}
 %\thanks{Manuscript received April 19, 2005; revised August 26, 2015.}} TODO
 }
