--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -1525,7 +1525,7 @@ N$ are weight functions such that $\sum_{a
 
 \begin{lemma} \label{weights-factors} If $w, w' : \mathbb A \to \mathbb N$ are
 weight functions and $k, k'$ are positive integers such that $k'w'(a) = kw(a)$
-for all $a$ then then $M(w) \frown M(w')$.  \end{lemma}
+for all $a$ then $M(w) \frown M(w')$.  \end{lemma}
 
 \begin{proof} By lemma \ref{weights-nearly-equal-factors}, since $\sum_{a \in
 \mathbb A} |k'w'(a) - kw(a)| = 0$.  \end{proof}
