Add copyright & licence

--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -386,6 +386,11 @@
 \thanks{The author is with the Operations and Planning Systems division of
 Tracsis plc, Leeds LS2 9DF, United Kingdom (email:
 dct25-a1vwi@mythic-beasts.com)}% <-this % stops a space
+\thanks{\copyright~2016-7 Tracsis plc. This work is licensed under the
+Creative Commons Attribution-ShareAlike 4.0 International License. To view a
+copy of this license, visit http://creativecommons.org/licenses/by-sa/4.0/
+or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042,
+USA.}%
 %\thanks{Digital Object Identifier 99.9999/ZZZ.9999.999999}
 %\thanks{Manuscript received April 19, 2005; revised August 26, 2015.}} TODO
 }
