--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -1680,14 +1680,14 @@ work.
 %% if you will not have a photo at all:
 \ifCLASSOPTIONpeerreview
 \else
-\begin{IEEEbiographynophoto}{David C. Turner} received the MMath degree and the
-Ph.D. degree from the University of Cambridge in 2011 and 2009 respectively.
-
-Since 2010 he has worked as a software engineer at Tracsis plc building systems
-to support and optimise operational planning processes in the transport
-industry.
-
-\end{IEEEbiographynophoto}
+%\begin{IEEEbiographynophoto}{David C. Turner} received the MMath degree and the
+%Ph.D. degree from the University of Cambridge in 2011 and 2009 respectively.
+%
+%Since 2010 he has worked as a software engineer at Tracsis plc building systems
+%to support and optimise operational planning processes in the transport
+%industry.
+%
+%\end{IEEEbiographynophoto}
 \fi
 
 %
